--- a/news_system_ui.ui
+++ b/news_system_ui.ui
@@ -13,18 +13,53 @@
   <property name="windowTitle">
    <string>news_system_ui</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:rgb(200,128,43)</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <property name="styleSheet">
+    <string notr="true">background-color:rgb(200, 128, 43)</string>
+   </property>
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>100</y>
-      <width>93</width>
-      <height>28</height>
+      <x>200</x>
+      <y>90</y>
+      <width>181</width>
+      <height>51</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
     <property name="text">
-     <string>百度搜索</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#ffffff;&quot;&gt;loading...&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::AutoText</enum>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>160</y>
+      <width>341</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QProgressBar{
+     background:transparent}
+QProgressBar::chunk {
+     background-color: rgb(239, 217, 193)}
+</string>
+    </property>
+    <property name="value">
+     <number>0</number>
     </property>
    </widget>
   </widget>
